--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=593477a22780fa2a96ea",
+    "/css/app.css": "/css/app.css?id=7730b7c17e660bb833d4"
 }
